@@ -25,6 +25,7 @@
 #ifdef SK_METAL
 #import <Metal/Metal.h>
 #import <QuartzCore/CAMetalLayer.h>
+#import <MetalKit/MetalKit.h>
 
 sk_sp<SkSurface> SkSurface::MakeFromCAMetalLayer(GrContext* context,
                                                  GrMTLHandle layer,
@@ -110,6 +111,90 @@ sk_sp<SkSurface> SkSurface::MakeFromCAMetalLayer(GrContext* context,
     sk_sp<SkSurface> surface = SkSurface_Gpu::MakeWrappedRenderTarget(context, std::move(rtc));
     return surface;
 }
+
+sk_sp<SkSurface> SkSurface::MakeFromMTKView(GrContext* context,
+                                            GrMTLHandle view,
+                                            GrSurfaceOrigin origin,
+                                            int sampleCnt,
+                                            SkColorType colorType,
+                                            sk_sp<SkColorSpace> colorSpace,
+                                            const SkSurfaceProps* surfaceProps) {
+    GrProxyProvider* proxyProvider = context->priv().proxyProvider();
+    const GrCaps* caps = context->priv().caps();
+
+    MTKView* mtkView = (__bridge MTKView*)view;
+    GrBackendFormat backendFormat = GrBackendFormat::MakeMtl(mtkView.colorPixelFormat);
+
+    GrColorType grColorType = SkColorTypeToGrColorType(colorType);
+
+    GrPixelConfig config = caps->getConfigFromBackendFormat(backendFormat, grColorType);
+    if (config == kUnknown_GrPixelConfig) {
+        return nullptr;
+    }
+
+    GrSurfaceDesc desc;
+    desc.fWidth = mtkView.drawableSize.width;
+    desc.fHeight = mtkView.drawableSize.height;
+    desc.fConfig = config;
+
+    GrProxyProvider::TextureInfo texInfo;
+    texInfo.fMipMapped = GrMipMapped::kNo;
+    texInfo.fTextureType = GrTextureType::k2D;
+
+    sk_sp<GrRenderTargetProxy> proxy = proxyProvider->createLazyRenderTargetProxy(
+            [view, sampleCnt, config](GrResourceProvider* resourceProvider) {
+                MTKView* mtkView = (__bridge MTKView*)view;
+                id<CAMetalDrawable> currentDrawable = [mtkView currentDrawable];
+
+                GrSurfaceDesc desc;
+                desc.fWidth = mtkView.drawableSize.width;
+                desc.fHeight = mtkView.drawableSize.height;
+                desc.fConfig = config;
+
+                GrMtlGpu* mtlGpu = (GrMtlGpu*) resourceProvider->priv().gpu();
+                sk_sp<GrRenderTarget> surface;
+                if (mtkView.framebufferOnly) {
+                    surface = GrMtlRenderTarget::MakeWrappedRenderTarget(
+                                      mtlGpu, desc, sampleCnt, currentDrawable.texture);
+                } else {
+                    surface = GrMtlTextureRenderTarget::MakeWrappedTextureRenderTarget(
+                                      mtlGpu, desc, sampleCnt, currentDrawable.texture,
+                                      GrWrapCacheable::kNo);
+                }
+                if (surface && sampleCnt > 1) {
+                    surface->setRequiresManualMSAAResolve();
+                }
+
+                return GrSurfaceProxy::LazyCallbackResult(std::move(surface));
+            },
+            backendFormat,
+            desc,
+            sampleCnt,
+            origin,
+            sampleCnt > 1 ? GrInternalSurfaceFlags::kRequiresManualMSAAResolve
+                          : GrInternalSurfaceFlags::kNone,
+            mtkView.framebufferOnly ? nullptr : &texInfo,
+            GrMipMapsStatus::kNotAllocated,
+            SkBackingFit::kExact,
+            SkBudgeted::kYes,
+            GrProtected::kNo,
+            false,
+            GrSurfaceProxy::UseAllocator::kYes);
+
+    const GrSwizzle& readSwizzle = caps->getReadSwizzle(backendFormat, grColorType);
+    const GrSwizzle& outputSwizzle = caps->getOutputSwizzle(backendFormat, grColorType);
+
+    SkASSERT(readSwizzle == proxy->textureSwizzle());
+
+    auto rtc = std::make_unique<GrRenderTargetContext>(context, std::move(proxy),
+                                                       grColorType, origin,
+                                                       readSwizzle, outputSwizzle,
+                                                       colorSpace, surfaceProps);
+
+    sk_sp<SkSurface> surface = SkSurface_Gpu::MakeWrappedRenderTarget(context, std::move(rtc));
+    return surface;
+}
+
 #endif
 
 #endif
